 * Added Issues audit script.
 * Added Issues search plugin.
 * Added EPrint Issues tab.
 * Added issues related privs.
 * Added orderkey method to EPrint::Extras to strip an/a/the for ordering.
 * Made title use this method, by default.
 * Added initial issues plugin for XML config (with config file), exact
    titles and similar titles.
 * Added issues citation (to lib not defaultcfg) to show results of issues
    search.

2008-03-31 cjg
 * Added role and priv restrictions for cgi toolbox. Closing #3165

2008-03-31 cjg
 * Moved export plugins to use map rather than get_records.

2008-03-31 cjg
 * Added a bunch of obscure missing phrases.

2008-04-01 cjg
 * Added column add/delete/rearrange options to Item and Review.
 * Made user.items_fields and user.review_fields volatile.
 * Removed those fields from the default user workflow.

2008-04-01 cjg
 * Fixed function which stopped the review form reading params.

2008-04-02 tdb
 * Don't set the port if it's the default for the URI, fixing #3325
 * Weaken circular references to prevent memory leaks under unusual conditions
    (e.g. EPrints::abort)

2008-04-03 cjg
 * Added option to use a custom citation file in saved search emails.

2008-04-03 cjg
 * Renamed issues to item_issues as a precaution against namespace clashes.
 * Renamed issues_first_seen to item_issues_timestamp as it's more correctly
    descriptive.
 * Added a bunch of fields to item_issues: reported_by, resolved_by, comments
    and status.
 * Renamed issues_count to item_issues_count.
 * Made related changes to issues search and citation.
 * Rendering issues only shows open issues.
 
======================================================================
2008-04-03 - EPRINTS-3.1-beta-1
======================================================================

2008-04-03 cjg
 * EPrint & Document URI's now correctly redirect to the appropriate URL.

2008-04-03 cjg
 * Added user.username and user.name to the staff eprint serach. Closing
    #3236