@@ -7254,3 +7254,7 @@ PACKAGE: 2.2.99.2
 2008-04-03 cjg
  * Added user.username and user.name to the staff eprint serach. Closing
     #3236
+
+2008-04-03 cjg
+ * Added "views.timestamp" to work like abstracts.timestamp
+ * Added regenerate views and regenerate abstracts buttons.
